# Lattice_DMRG

./: .gitignore  AUX_FUNCS.f90  BLOCKS.f90  CMakeLists.txt  CONNECT.f90  DMRG.f90  DMRG_CONNECT.f90  DMRG_MAIN.f90  DMRG_MEASURE.f90  DMRG_RDM.f90  DMRG_SUPERBLOCK.f90  DMRG_SUPERBLOCK_COMMON.f90  DMRG_SUPERBLOCK_DIRECT.f90  DMRG_SUPERBLOCK_SPARSE.f90  DMRG_SYSTEM.f90  GLOBAL.f90  HLOCAL.f90  HUBBARD_DMRG.f90  INPUT_VARS.f90  LIST_OPERATORS.f90  LIST_SECTORS.f90  MATRIX_BLOCKS.f90  MATRIX_SPARSE.f90  MEASURE.f90  Makefile  README.md  SITES.f90  SUPERBLOCK.f90  SYSTEM.f90  TUPLE_BASIS.f90  VARS_GLOBAL.f90  VERSION.f90  testDMRG_Sone.f90  testDMRGinfinite.f90  testDMRGqn.f90  testEDkron.f90  testEDkronUD.f90  testEDnsites.f90  testQN.f90  test_iDMRG.f90  (+1 more)
.plot/: script_figs.py
build_dev_mpi_release/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build_devel_mpi/: CMakeCache.txt  Makefile  cmake_install.cmake  version  (+2 more)
src/: AUX_FUNCS.f90  CMakeLists.txt  DMRG.f90  DMRG_CONNECT.f90  DMRG_GLOBAL.f90  DMRG_MAIN.f90  DMRG_MEASURE.f90  DMRG_RDM.f90  DMRG_SUPERBLOCK.f90  DMRG_SUPERBLOCK_SETUP.f90  INPUT_VARS.f90  VARS_GLOBAL.f90  VERSION.f90  revision.in
src/BLOCKS/: BLOCKS.f90  CMakeLists.txt  SITES.f90  make_test.inc
src/DOTS/: BLOCKS.f90  CMakeLists.txt  SITES.f90
src/FOCK/: CMakeLists.txt  HLOCAL.f90  make_test.inc
src/LIST/: CMakeLists.txt  LIST_OPERATORS.f90  LIST_SECTORS.f90  QN_TUPLE_BASIS.f90  make_test.inc
src/MATRIX/: CMakeLists.txt  MATRIX_BLOCKS.f90  MATRIX_GRAPH.f90  MATRIX_SPARSE.f90  make_test.inc
(+142 files in other folders)
