# DMRG library
#Generate version module:
CONFIGURE_FILE(${LIB_SRC}/revision.in ${LIB_SRC}/VERSION.f90 @ONLY)

#AUX LIB
FILE(GLOB AUX_SRC
  VERSION.f90
  INPUT_VARS.f90
  AUX_FUNCS.f90
  )
ADD_LIBRARY(AUX_LIB OBJECT ${AUX_SRC})



# DMRG library
FILE(GLOB DMRG_SRC
  VARS_GLOBAL.f90
  DMRG_CONNECT.f90
  DMRG_SUPERBLOCK_SETUP.f90
  DMRG_SUPERBLOCK.f90
  DMRG_RDM.f90
  DMRG_MEASURE.f90
  DMRG_MAIN.f90
  DMRG.f90
)
ADD_LIBRARY(DMRG_LIB OBJECT  ${DMRG_SRC})
